--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
     </nav>
 
     <main>
-        <section>Course Work
+        <section>
+            <h1>Course Work</h1>
 
 
         </section>
 
-        <section>Whoville, Legume
+        <section>
+            <h1>Whoville, Legume</h1>
 
             
         </section>
 
-        <section>Web and Computer Progamming Certificate
+        <section>
+            <h1>Web and Computer Progamming Certificate</h1>
 
             
         </section>
