--- a/index.html
+++ b/index.html
@@ -33,24 +33,25 @@
     </nav>
 
     <main>
-        <section>
-            <h1>Course Work</h1>
+        <div class="flexbox-container">
+            <div class="flexbox-item flexbox-item-1">
+                <section>
+                    <h1>Course Work</h1>
+                </section>
+            </div>
 
+            <div class="flexbox-item flexbox-item-2">
+                <section>
+                    <h1>Whoville, Legume</h1>
+                </section>
+            </div>
 
-        </section>
-
-        <section>
-            <h1>Whoville, Legume</h1>
-
-            
-        </section>
-
-        <section>
-            <h1>Web and Computer Progamming Certificate</h1>
-
-            
-        </section>
-
+            <div class="flexbox-item flexbox-item-3">
+                <section>
+                    <h1>Web and Computer Progamming Certificate</h1>
+                </section>
+            </div>
+        </div> 
     </main>
 
     <footer>
