--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </ul>  
     </nav>
 
+    
+
     <main>
         <div class="flexbox-container">
             <div class="flexbox-item flexbox-item-1">
@@ -49,6 +51,7 @@
             <div class="flexbox-item flexbox-item-3">
                 <section>
                     <h1>Web and Computer Progamming Certificate</h1>
+                    <div id="courseList"></div>
                 </section>
             </div>
         </div> 
