--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-
+        <h1>HEADER</h1>
     </header>
     
     <nav>
@@ -41,10 +41,12 @@
         <div class="flexbox-container">
             <div class="flexbox-item flexbox-item-1">
                 <h1>Course Work</h1>
+                <p>ITEM</p>
             </div>
 
             <div class="flexbox-item flexbox-item-2">
                 <h1>Whoville, Legume</h1>
+                <p>ITEM</p>
             </div>
 
             <div class="flexbox-item flexbox-item-3">  
