--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                     <button id="cseButton">CSE</button>
                     <button id="wddButton">WDD</button>
                 </div>
-                <div id="courseList"></div>                
+                <div id="courseList">
+                </div> 
+                <p id="total">TOTAL CREDITS: <span id="credits"></span></p>
             </div>
         </div> 
     </main>
