--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <section id="courseWork">
                 <div class="flexbox-item flexbox-item-1">
                     <h1>Course Work</h1>
-                    <p>ITEM</p>
+                    <p>INFORMATION</p>
                 </div>
             </section>
 
             <section id="location">
                 <div class="flexbox-item flexbox-item-2">
                     <h1>Whoville, Legume</h1>
-                    <p>ITEM</p>
+                    <p>PHOTO</p>
                 </div>
             </section>
 
