--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,14 +6,14 @@
         <title>Emory K Worsham, Course Work</title>
         <meta name="description" content="Course Work | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
-        <meta property="og:title" content="Homepage - Emory K Worsham">
+        <meta property="og:title" content="Facebook - Emory K Worsham">
         <meta property="og:type" content="Website">
-        <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000">
-        <meta property="og:url" content="https://ekworsham.github.io/wdd231/">
+        <meta property="og:image" content="">
+        <meta property="og:url" content="https://www.facebook.com/keith.worsham.585/">
     
-        <script src="scripts/cOc.js" defer></script>
-        <link rel="stylesheet" href="styles/cOcBase.css">
-        <link rel="stylesheet" href="styles/cOcLarge.css">
+        <script src="scripts/directory.js" defer></script>
+        <link rel="stylesheet" href="styles/directoryBase.css">
+        <link rel="stylesheet" href="styles/directoryBase.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Walter+Turncoat&display=swap" rel="stylesheet">
