--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Emory K Worsham, Course Work</title>
-        <meta name="description" content="Course Work | WDD 231 - Web Frontend Development I">
+        <title>Directory</title>
+        <meta name="description" content="Directory | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Facebook - Emory K Worsham">
         <meta property="og:type" content="Website">
@@ -13,7 +13,7 @@
     
         <script src="scripts/directory.js" defer></script>
         <link rel="stylesheet" href="styles/directoryBase.css">
-        <link rel="stylesheet" href="styles/directoryBase.css">
+        <link rel="stylesheet" href="styles/directoryLarge.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Walter+Turncoat&display=swap" rel="stylesheet">
