--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,10 +6,11 @@
         <title>Directory</title>
         <meta name="description" content="Directory | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
-        <meta property="og:title" content="Facebook - Emory K Worsham">
+        <meta property="og:title" content="Whoville Chamber of Commerce">
+        <meta property="og:description" content="Whoville Chamber of Commerce home page">
         <meta property="og:type" content="Website">
-        <meta property="og:image" content="">
-        <meta property="og:url" content="https://www.facebook.com/keith.worsham.585/">
+        <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000" alt="Whoville">
+        <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber">
     
         <script src="scripts/directory.js" defer></script>
         <link rel="stylesheet" href="styles/directoryBase.css">
