--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,8 @@
         <meta property="og:title" content="Whoville Chamber of Commerce">
         <meta property="og:description" content="Whoville Chamber of Commerce home page">
         <meta property="og:type" content="Website">
-        <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000" alt="Whoville">
+        <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000">
+        <meta property="og:image" alt="Whoville">
         <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber">
     
         <script src="scripts/directory.js" defer></script>
