--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,8 +10,11 @@
         <meta property="og:description" content="Whoville Chamber of Commerce home page">
         <meta property="og:type" content="Website">
         <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000">
+        <meta property="og:image:alt" content="City of Canton"> 
         <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber/">
-    
+        <meta property="og:url" content="https://www.facebook.com/keith.worsham.585/">
+        <meta property="og:image:alt" content="Keth Worsham - Facebook"> 
+     
         <script src="scripts/directory.js" defer></script>
         <link rel="stylesheet" href="styles/directoryBase.css">
         <link rel="stylesheet" href="styles/directoryLarge.css">
