--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -24,10 +24,20 @@
         <link rel="icon" href="favicon.ico">
     </head>
 <body>
-    
-
-
-
+    <header>
+        <h1>Emory K. Worsham</h1>
+        
+        <nav>
+            <!-- button id and menuLinks is for hamburger icon -->
+            <button id="myButton" aria-label="button"></button>
+            <ul class="menuLinks">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Chamber</a></li>
+                <li><a href="#">GitHub profile</a></li>
+                <li><a href="https://www.linkedin.com/in/keith-worsham/">LinkedIn</a></li>
+            </ul>  
+        </nav>
+    </header>
 
     <footer>
         <p>&copy;<span id="currentYear"></span> | Emory Keith Worsham | Legume</p>
