--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <section id="location">
                 <div class="flexbox-item flexbox-item-2">
-                    <h1>Whoville, Legume</h1>
+                    <h1>Whoville, Mt. Crumpit</h1>
                     <p>PHOTO</p>
                 </div>
             </section>
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-        <p>&copy;<span id="currentYear"></span> | Emory Keith Worsham | Legume</p>
+        <p>&copy;<span id="currentYear"></span> | Emory Keith Worsham | Whoville</p>
         <p id="lastModified"></p>
     </footer>
 
