--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -30,8 +30,7 @@
             <h1>Whoville</h1>
             <h2>Chamber of Commerce</h2>
         <div>
-            
-        
+
         <nav>
             <!-- button id and menuLinks is for hamburger icon -->
             <button id="myButton" aria-label="button"></button>
@@ -102,7 +101,7 @@
                 <div class="cardHeader1">
                     <img src="images/The Grinch.webp" alt="Profile Picture" class="profileImg1">
                     <div class="contactInfo1">
-                        <h3 id="grinch">The Grinch<br>Scruge</h3>
+                        <h3 id="grinch">The Grinch<br>.....Scruge</h3>
                         <p>EMAIL: grinch@StoleChristmas.max</p>
                         <p>PHONE: (800)GRINCH</p>
                         <p>URL: grinch.max</p>
