--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Directory | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Whoville Chamber of Commerce">
-        <meta property="og:description" content="Whoville Chamber of Commerce home page">
+        <meta property="og:description" content="Whoville Chamber of Commerce directory page">
         <meta property="og:type" content="Website">
         <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000">
         <meta property="og:image:alt" content="City of Canton"> 
@@ -26,33 +26,33 @@
 <body>
     <header>
         <img class="logo" src="images/WhovilleSmallA.jpg" alt="whoville Logo">
-        </div id="title">
+        <div id="title">
             <h1>Whoville</h1>
             <h2>Chamber of Commerce</h2>
-        <div>
+        </div>
 
         <nav>
             <!-- button id and menuLinks is for hamburger icon -->
             <button id="myButton" aria-label="button"></button>
             <ul class="menuLinks">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#" >Home</a></li>
                 <li><a href="#">Discover</a></li>
-                <li><a href="#">Business Directory</a></li>
+                <li><a href="#" class="active">Business Directory</a></li>
                 <li><a href="#">Join</a></li>
             </ul>  
         </nav>
     </header>
 
     <main>
-        
+        <h2>Directory</h2>
+        <div id="cards"></div>
 
 
 
 
 
-        
 
-        <section id="card">
+        <!-- <section id="card">
             <div class="businessCard1">
                 <div class="cardHeader1">
                     <img src="images/mayor_augustus.png" alt="Profile Picture" class="profileImg1">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
