--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,6 +45,8 @@
 
     <main>
         <h2>Directory</h2>
+        <button id="cardView">MEMBERS CARD</button>
+        <button id="listView">MEMBER LIST</button>
         <div id="card"></div>
 
 
