--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -48,6 +48,7 @@
         <button id="cardView">MEMBERS CARD</button>
         <button id="listView">MEMBER LIST</button>
         <div id="card"></div>
+        <div id="list"></div>
 
 
 
