--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,7 @@
     </head>
 <body>
     <header>
-        <img class="logo" src="images/WhovilleSmallA.jpg" alt="whoville Logo">
+        <img class="logo" src="images/WhovilleSmallA.webp" alt="whoville Logo" width="100" height="100" loading="lazy">
         <div id="title">
             <h1>Whoville</h1>
             <h2>Chamber of Commerce</h2>
@@ -37,7 +37,7 @@
             <ul class="menuLinks">
                 <li><a href="#" >Home</a></li>
                 <li><a href="#">Discover</a></li>
-                <li><a href="#" class="active">Business Directory</a></li>
+                <li><a href="#" class="active">Directory</a></li>
                 <li><a href="#">Join</a></li>
             </ul>  
         </nav>
@@ -45,53 +45,12 @@
 
     <main>
         <h2>Directory</h2>
-        <button id="cardView">MEMBERS CARD</button>
-        <button id="listView">MEMBER LIST</button>
+        <div id="buttonContainer">
+            <button id="cardView">MEMBERS CARD</button>
+            <button id="listView">MEMBER LIST</button>
+        </div>
         <div id="card"></div>
         <div id="list"></div>
-
-
-
-
-
-
-        <!-- <section id="card">
-            <div class="businessCard1">
-                <div class="cardHeader1">
-                    <img src="images/mayor_augustus.png" alt="Profile Picture" class="profileImg1">
-                    <div class="contactInfo1">
-                        <h3>Augustus May Who<br>Mayor</h3>
-                        <p>EMAIL: agustus@whoville.who</p>
-                        <p>PHONE: (800)MAYOR</p>
-                        <p>URL: mayor.who </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="businessCard1">
-                <div class="cardHeader1">
-                    <img src="images/The Grinch.webp" alt="Profile Picture" class="profileImg1">
-                    <div class="contactInfo1">
-                        <h3 id="grinch">The Grinch<br>.....Scruge</h3>
-                        <p>EMAIL: grinch@StoleChristmas.max</p>
-                        <p>PHONE: (800)GRINCH</p>
-                        <p>URL: grinch.max</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="businessCard1">
-                <div class="cardHeader1">
-                    <img src="images/Natal.jpeg" alt="Profile Picture" class="profileImg1">
-                    <div class="contactInfo1">
-                        <h3>Lou Lou Who<br>Postal Worker</h3>
-                        <p>Email: LouLou@whoville.who</p>
-                        <p>Phone: (800)POSTAL</p>
-                        <p>URL: postOffice.who</p>
-                    </div>
-                </div>
-            </div>
-        </section> -->
 
     </main>
 
@@ -100,13 +59,13 @@
         
         <div class="social">
             <a href="https://www.facebook.com/profile.php?id=100057151702793" target="_blank">
-                <img src="images/facebook.png" alt="fb icon" width="100" height="100" loading="lazy">
+                <img src="images/facebook.webp" alt="fb icon" width="100" height="100" loading="lazy">
             </a>
             <a href="https://x.com/" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon" width="100" height="100" loading="lazy">
+                <img src="images/twitter.webp" alt="twitter icon" width="100" height="100" loading="lazy">
             </a>
             <a href="https://www.linkedin.com/in/keith-worsham/" target="_blank">
-                <img src="images/LinkedIn.jpg" alt="linkedIn icon" width="100" height="100" loading="lazy">
+                <img src="images/LinkedIn.webp" alt="linkedIn icon" width="100" height="100" loading="lazy">
             </a>
         </div>
 
