--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Directory</title>
-        <meta name="description" content="Directory | WDD 231 - Web Frontend Development I">
+        <title>Home</title>
+        <meta name="description" content="Home | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Whoville Chamber of Commerce">
         <meta property="og:description" content="Whoville Chamber of Commerce home page">
@@ -25,7 +25,7 @@
     </head>
 <body>
     <header>
-        <img class="logo" src="images/WhovilleSmallA.jpg" alt="whoville Logo">
+        <img class="logo" src="images/WhovilleSmallA.webp" alt="whoville Logo">
         </div id="title">
             <h1>Whoville</h1>
             <h2>Chamber of Commerce</h2>
@@ -45,32 +45,21 @@
 
     <main>
         <div class="img">
-            <img src="images/whoville City.webp" alt="hero image" class="heroImg">
-                <div class="contactInfo">
+            <img src="images/whoville City.webp" alt="hero image" class="heroImg" width="100" height="100" loading="lazy">
         </div>
 
         <h1>Home</h1> 
 
-        <div id="firstDiv">
+        <div id="container">
             <section>
                 <div class="event">
                     <h3>Events</h3>
                 </div>  
-
-                <div id="event">
-                    <p>-<br>-<br>-<br>-</p>
-                
-                </div>
             </section>
 
             <section>
                 <div class="weather">
                     <h3>Current Weather</h3>
-                </div>
-
-                <div id="weather">
-                    <P id="cloud">🌦️</P>
-                    <p id="data">75° F<br>Partly Cloudy<br>High: 85°<br>Low: 52°<br>Humidity: 35%<br>Sunrise: 7:30am<br>Sunset: 8:30pm</p>
                 </div>
             </section>
 
@@ -78,52 +67,10 @@
                 <div class="forcast">
                     <h3>Weather Forcast</h3>
                 </div>
-
-                <div id="forcast">
-                    <p>test</p>
-                </div>
             </section>
         </div>
-
-        <section id="card">
-            <div class="businessCard1">
-                <div class="cardHeader1">
-                    <img src="images/mayor_augustus.png" alt="Profile Picture" class="profileImg1">
-                    <div class="contactInfo1">
-                        <h3>Augustus May Who<br>Mayor</h3>
-                        <p>EMAIL: agustus@whoville.who</p>
-                        <p>PHONE: (800)MAYOR</p>
-                        <p>URL: mayor.who </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="businessCard1">
-                <div class="cardHeader1">
-                    <img src="images/The Grinch.webp" alt="Profile Picture" class="profileImg1">
-                    <div class="contactInfo1">
-                        <h3 id="grinch">The Grinch<br>.....Scruge</h3>
-                        <p>EMAIL: grinch@StoleChristmas.max</p>
-                        <p>PHONE: (800)GRINCH</p>
-                        <p>URL: grinch.max</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="businessCard1">
-                <div class="cardHeader1">
-                    <img src="images/Natal.jpeg" alt="Profile Picture" class="profileImg1">
-                    <div class="contactInfo1">
-                        <h3>Lou Lou Who<br>Postal Worker</h3>
-                        <p>Email: LouLou@whoville.who</p>
-                        <p>Phone: (800)POSTAL</p>
-                        <p>URL: postOffice.who</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
     </main>
+
 
     <footer>
         <p id="footerTitle">Whoville Chamber of Commerce<br>1966 Snowflake Lane<br>Whoville, Mt. Crumpit<br>whovill@GrinchStoleChristmas.who<br>1-800-who-ville</p>
