--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,9 +35,9 @@
             <!-- button id and menuLinks is for hamburger icon -->
             <button id="myButton" aria-label="button"></button>
             <ul class="menuLinks">
-                <li><a href="#" >Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a href="#">Discover</a></li>
-                <li><a href="#" class="active">Directory</a></li>
+                <li><a href="directory.html" class="active">Directory</a></li>
                 <li><a href="#">Join</a></li>
             </ul>  
         </nav>
