--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,21 +11,20 @@
         <meta property="og:type" content="Website">
         <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000">
         <meta property="og:image:alt" content="City of Canton"> 
-        <!-- <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber/"> -->
+        <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber/">
         <meta property="og:url" content="https://www.facebook.com/keith.worsham.585/">
         <meta property="og:image:alt" content="Keith Worsham - Facebook"> 
-     
+        <link rel="icon" href="favicon.ico">
         <script src="scripts/directory.js" defer></script>
         <link rel="stylesheet" href="styles/directoryBase.css" media="all">
         <link rel="stylesheet" href="styles/directoryLarge.css" media="(min-width: 768px)">
         <link rel="preload" href="https://fonts.googleapis.com">
         <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Walter+Turncoat&display=swap" rel="stylesheet">
-        <link rel="icon" href="favicon.ico">
     </head>
 <body>
     <header>
-        <img class="logo" src="images/WhovilleSmallA.webp" alt="whoville Logo" width="100" height="100" loading="lazy">
+        <img class="logo" src="images/WhovilleSmallA.webp" alt="whoville Logo" width="50" height="50" loading="lazy">
         <div id="title">
             <h1>Whoville</h1>
             <h2>Chamber of Commerce</h2>
@@ -65,13 +64,13 @@
         
         <section class="social">
             <a href="https://www.facebook.com/profile.php?id=100057151702793" target="_blank" rel="noopener noreferrer">
-                <img src="images/facebook.webp" alt="fb icon" width="100" height="100" loading="lazy">
+                <img src="images/facebook.webp" alt="fb icon" width="50" height="50" loading="lazy">
             </a>
             <a href="https://x.com/" target="_blank" rel="noopener noreferrer">
-                <img src="images/twitter.webp" alt="twitter icon" width="100" height="100" loading="lazy">
+                <img src="images/twitter.webp" alt="twitter icon" width="50" height="50" loading="lazy">
             </a>
             <a href="https://www.linkedin.com/in/keith-worsham/" target="_blank" rel="noopener noreferrer">
-                <img src="images/LinkedIn.webp" alt="linkedIn icon" width="100" height="100" loading="lazy">
+                <img src="images/LinkedIn.webp" alt="linkedIn icon" width="50" height="50" loading="lazy">
             </a>
         </section>
 
