--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,11 +25,11 @@
     </head>
 <body>
     <header>
-        <img class="logo" src="images/WhovilleSmallA.webp" alt="whoville Logo">
-        </div id="title">
+        <img class="logo" src="images/WhovilleSmallA.webp" alt="whoville Logo" width="100" height="100" loading="lazy">
+        <div id="title">
             <h1>Whoville</h1>
             <h2>Chamber of Commerce</h2>
-        <div>
+        </div>
 
         <nav>
             <!-- button id and menuLinks is for hamburger icon -->
