--- a/map.html
+++ b/map.html
@@ -12,6 +12,7 @@
 
     <main>
         <p>The current temperature in Trier, Germany is <span id="current-temp"></span></p>
+        <p>The town is <span id="my-town"></span></p>
         <figure>
             <img id="weather-icon" src="" alt="">
             <figcaption></figcaption>
