--- a/map.html
+++ b/map.html
@@ -5,27 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="scripts/map.js" defer></script>
+    <link rel="stylesheet" href="styles/maps.css">
 </head>
 <body>
 
-    <h1>OpenWeatherMap.org API Test</h1>
+    <h1>API Weather Lab</h1>
 
     <main>
-        <p>The current temperature in Trier, Germany is <span id="current-temp"></span></p>
-        <p>The town is <span id="my-town"></span></p>
-        <figure>
-            <img id="weather-icon" src="" alt="">
-            <figcaption></figcaption>
-        </figure>
+        <div class ="card">
+            <p>The current temperature in Trier, Germany is <span id="current-temp"></span></p>
+            <p>The town is <span id="my-town"></span></p>
+            <figure>
+                <img id="weather-icon" src="" alt="">
+                <figcaption></figcaption>
+            </figure>
+        </div>
     </main>
 
     <footer>
     Keith Worsham | OpenWeatherMap.org | CC BY-SA 4.0
     </footer>
-
-
-
-
-    
 </body>
 </html>
