--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,8 +9,8 @@
         <meta property="og:title" content="Whoville Chamber of Commerce">
         <meta property="og:description" content="Whoville Chamber of Commerce home page">
         <meta property="og:type" content="Website">
-        <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000">
-        <meta property="og:image:alt" content="City of Canton"> 
+        <meta property="og:image" content="https://www.vmcdn.ca/f/files/glaciermedia/import/lmp-all/1271817-whoville-grinch-stole-christmas.jpg;w=851">
+        <meta property="og:image:alt" content="City of Whoville"> 
         <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber/">
         <meta property="og:url" content="https://www.facebook.com/keith.worsham.585/">
         <meta property="og:image:alt" content="Keth Worsham - Facebook"> 
