--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,6 +46,7 @@
     <main>
         <div class="img">
             <img src="images/whoville City.webp" alt="hero image" class="heroImg" width="100" height="100" loading="lazy">
+            <a href="join.html" class="ctaButton">Sign Up Now</a>
         </div>
 
         <h1>Home</h1> 
@@ -68,6 +69,13 @@
                     <h3>Weather Forcast</h3>
                 </div>
             </section>
+        </div>
+
+        <div id="advertise">
+            <h3>Company Advertisement</h3>
+            <p>Spot Light 1</p>
+            <p>Spot Light 2</p>
+            <p>Spot Light 3</p>
         </div>
     </main>
 
