--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <ul class="menuLinks">
             <!-- button id and menuLinks is for hamburger icon -->
             <button id="myButton" aria-label="button"></button>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Chamber</a></li>
-                <li><a href="#">GitHub profile</a></li>
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="chamber/index.html">Chamber</a></li>
+                <li><a href="https://github.com/ekworsham">GitHub profile</a></li>
                 <li><a href="https://www.linkedin.com/in/keith-worsham/">LinkedIn</a></li>
             </ul>  
         </nav>
