--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,9 +67,9 @@
                         <figure>
                             <figcaption></figcaption>
                         </figure>
-                        <p>High: <span id="high-temp"></span></p>
+                        <!-- <p>High: <span id="high-temp"></span></p>
                         <p>Low: <span id="low-temp"></span></p>
-                        
+                         -->
                         <p>The State is <span id="my-town"></span></p>
                         
                     </div>
