--- a/chamber/index.html
+++ b/chamber/index.html
@@ -90,9 +90,8 @@
 
         <div id="advertise">
             <h3>Company Advertisement</h3>
-            <p>Spot Light 1</p>
-            <p>Spot Light 2</p>
-            <p>Spot Light 3</p>
+            <div id="card"></div>
+            
         </div>
     </main>
 
