--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,7 +6,7 @@
         <title>Home</title>
         <meta name="description" content="Home | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
-        <meta property="og:title" content="Whoville Chamber of Commerce">
+        <meta property="og:title" content="Whoville Chamber of Commerce Home Page">
         <meta property="og:description" content="Whoville Chamber of Commerce home page">
         <meta property="og:type" content="Website">
         <meta property="og:image" content="https://www.vmcdn.ca/f/files/glaciermedia/import/lmp-all/1271817-whoville-grinch-stole-christmas.jpg;w=851">
@@ -44,7 +44,7 @@
 
     <main>
         <div class="img">
-            <img src="images/whoville City.webp" alt="hero image" class="heroImg" width="100" height="100" loading="lazy">
+            <img src="images/whovilleCity.webp" alt="hero image" class="heroImg" width="100" height="100" loading="lazy">
             <a href="join.html" class="ctaButton">Sign Up Now</a>
         </div>
 
@@ -92,7 +92,7 @@
             <h3>Company Advertisement</h3>
             <div id="card"></div>
         </div>
-        
+
     </main>
 
 
