--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <div id="courseList"></div> 
                         <p id="total">TOTAL CREDITS: <span id="credits"></span></p>
                 </div>
+
+                <dialog id="course-details"></dialog>
+
             </section>          
         </div> 
 
