--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,9 +18,9 @@
         <script src="scripts/directory.js" defer></script>
         <link rel="stylesheet" href="styles/directoryBase.css" media="all">
         <link rel="stylesheet" href="styles/directoryLarge.css" media="(min-width: 768px)">
-        <link rel="preload" href="https://fonts.googleapis.com">
-        <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Walter+Turncoat&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Walter+Turncoat&display=swap" rel="stylesheet">
     </head>
 <body>
     <header>
