--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <h2>Membership Application Form</h2>
+        <h2 id="membership-form">Membership Application Form</h2>
         <div class="formContainer">
             <form method="get" action="thankyou.html">
                 <label>
@@ -78,7 +78,7 @@
                 <input type="submit" value="Submit Application">
             </form>
 
-            <h3>Membership Level</h3>
+            <h3 id="membership-level">Membership Level</h3>
             <div class="membership-levels"></div>
             <dialog class="dialog-box"></dialog>
         </div>
