--- a/chamber/join.html
+++ b/chamber/join.html
@@ -47,31 +47,31 @@
         <div class="formContainer">
             <form method="get" action="thankyou.html">
                 <label>
-                    <h4>First Name:</h4>
+                    First Name:
                     <input type="text" required="Applicant's First Name" name="firstName" title="name" autocomplete="given-name">
                 </label>
                 <label>
-                    <h4>Last Name:</h4>
+                    Last Name:
                     <input type="text" required="Applicant's Last Name" name="lastName" title="name" autocomplete="given-name">
                 </label>
                 <label>
-                    <h4>Organizational Title:</h4>
+                    Organizational Title:
                     <input type="text" name="orgTitle" title="Applicant's Organizational Title" autocomplete="organization-title" pattern = "[A-Za-z-\s]{7,}">
                 </label>
                 <label>
-                    <h4>Email Address:</h4>
+                    Email Address:
                     <input type="email" required="Applicant's email address" name="email" title="email"  autocomplete="email" placeholder = "example@email.com">
                 </label>
                 <label>
-                    <h4>Cell Phone:</h4>
+                    Cell Phone:
                     <input type="telephone" required="Applicant's mobile Number" name="mobile" title="number"  autocomplete="mobile number">
                 </label>
                 <label>
-                    <h4>Organization's Name:</h4>
+                    Organization's Name:
                     <input type="text" required="Applicant's organization-name Number" name="orgName" title="orgName"  autocomplete="organization">
                 </label>
                 <label>
-                    <h4>Organization Description:</h4>
+                    Organization Description:
                     <textarea name="OrgDescription" title="Organization"></textarea>
                 </label>
                 <input type="hidden" name="timestamp" id="timestamp">
