--- a/chamber/join.html
+++ b/chamber/join.html
@@ -65,7 +65,7 @@
                 </label>
                 <label>
                     Cell Phone:
-                    <input type="number" name="mobile" title="number"  autocomplete="on" required>
+                    <input type="number" name="mobile" title="number"  autocomplete="on" placeholder="(123) 456-7890">
                 </label>
                 <label>
                     Organization's Name:
@@ -76,7 +76,7 @@
                     <textarea name="OrgDescription" title="Organization"></textarea>
                 </label>
                 <input type="hidden" name="timestamp" id="timestamp">
-                <input type="submit" value="Submit Application">
+                <input a href="thankYou.html" type="submit" value="Submit Application">
             </form>
 
             
