--- a/chamber/join.html
+++ b/chamber/join.html
@@ -76,7 +76,7 @@
                     <textarea name="OrgDescription" title="Organization"></textarea>
                 </label>
                 <input type="hidden" name="timestamp" id="timestamp">
-                <input a href="thankYou.html" type="submit" value="Submit Application">
+                <input type="submit" value="Submit Application">
             </form>
 
             
