--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Whoville Chamber of Commerce">
         <meta property="og:description" content="Whoville Chamber of Commerce directory page">
-        <meta property="og:type" content="Website">
+        <meta property="og:type" content="website">
         <meta property="og:image" content="https://www.cantonga.gov/home/showpublishedimage/594/637451136859500000">
         <meta property="og:image:alt" content="City of Canton"> 
         <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber/">
