--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Whoville Chamber of Commerce Home Page">
         <meta property="og:description" content="Whoville Chamber of Commerce home page">
-        <meta property="og:type" content="Website">
+        <meta property="og:type" content="website">
         <meta property="og:image" content="https://www.vmcdn.ca/f/files/glaciermedia/import/lmp-all/1271817-whoville-grinch-stole-christmas.jpg;w=851">
         <meta property="og:image:alt" content="City of Whoville"> 
         <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber/">
