--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>Thank You</title>
         <meta name="description" content="Thank You | WDD 231 - Web Frontend Development I">
         <meta name="author" content="Keith Worsham">
         <meta property="og:title" content="Whoville Chamber of Commerce Thank You Page">
         <meta property="og:description" content="Whoville Chamber of Commerce Thank You page">
-        <meta property="og:type" content="Website">
+        <meta property="og:type" content="website">
         <meta property="og:image" content="https://www.vmcdn.ca/f/files/glaciermedia/import/lmp-all/1271817-whoville-grinch-stole-christmas.jpg;w=851">
         <meta property="og:image:alt" content="City of Whoville"> 
         <meta property="og:url" content="https://ekworsham.github.io/wdd231/chamber/">
