--- a/chamber/join.html
+++ b/chamber/join.html
@@ -47,7 +47,7 @@
         <div class="formContainer">
             <form method="get" action="thankyou.html">
                 <label>
-                    <b><span style="font-size: 1.5rem;">Membership Application Form</span> </b><br>
+                    <b>Membership Application Form</b><br>
                     First Name:
                     <input type="text" name="firstName" title="name" autocomplete="given-name" required>
                 </label>
