update personal website

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -97,7 +97,7 @@
 
 
     <footer>
-        <p id="footerTitle">Whoville Chamber of Commerce<br>1966 Snowflake Lane<br>Whoville, Mt. Crumpit<br>whovill@GrinchStoleChristmas.who<br>1-800-who-ville</p>
+        <p id="footerTitle">Whoville Chamber of Commerce<br>1966 Snowflake Lane<br>Whoville, Mt. Crumpit<br>Whoville@GrinchStoleChristmas.who<br>1-800-who-ville</p>
         
         <div class="social">
             <a href="https://www.facebook.com/profile.php?id=100057151702793" target="_blank">
