--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,7 +35,7 @@
             <button id="myButton" aria-label="Open navigation menu" aria-expanded="false"></button>
             <ul class="menuLinks">
                 <li><a href="index.html" >Home</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html" class="active">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
             </ul>  
