--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
             <button id="myButton" aria-label="button"></button>
             <ul class="menuLinks">
                 <li><a href="" class="active">Home</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
             </ul>  
