--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -85,14 +85,17 @@
         </Div>
 
         <div class="img">
-            <img src="images/dog (1).webp" alt="Dog"  loading="lazy">
+            <img src="images/dog(1).webp" alt="Dog"  loading="lazy">
             <img src="images/taxi(1).webp" alt="Vehicle"  loading="lazy">
-            <img src="images/town (1).webp" alt="Town"  loading="lazy">
-            <img src="images/sleighRide (1).webp" alt="Sleigh Ride"  loading="lazy">
-            <img src="images/toys (1).webp" alt="Dog"  loading="lazy">
-            <img src="images/tree (1).webp" alt="Tree"  loading="lazy">
+            <img src="images/town(1).webp" alt="Town"  loading="lazy">
+            <img src="images/sleighRide(1).webp" alt="Sleigh Ride"  loading="lazy">
+            <img src="images/toys(1).webp" alt="Dog"  loading="lazy">
+            <img src="images/tree(1).webp" alt="Tree"  loading="lazy">
         </div>
-
+        
+        <div id="sidebar">
+            <div id="visit-message"></div>
+        </div>
     </main>
 
 <footer>
@@ -109,6 +112,8 @@
                 <img src="images/LinkedIn.jpg" alt="linkedIn icon" width="100" height="100" loading="lazy">
             </a>
         </div>
+
+        
 
         <div>
             <p>WDD231 Class Project<br>Emory Keith Worsham</p>
