--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -35,7 +35,7 @@
             <button id="myButton" aria-label="button"></button>
             <ul class="menuLinks">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#" class="active">Discover</a></li>
+                <li><a href="discover.html" class="active">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
             </ul>  
