--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,7 +34,7 @@
             <!-- button id and menuLinks is for hamburger icon -->
             <button id="myButton" aria-label="button"></button>
             <ul class="menuLinks">
-                <li><a href="" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
