--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,7 +48,7 @@
             <a href="join.html" class="ctaButton">Sign Up Now</a>
         </div>
 
-        <h1>Home</h1> 
+        <h1>Home Page</h1> 
 
         <div id="container">
             <section>
