--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-        <h2>Directory</h2>
+        <h2>Directory Page</h2>
         <div id="buttonContainer">
             <button id="cardView">MEMBERS CARD</button>
             <button id="listView">MEMBER LIST</button>
