--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,12 +43,12 @@
     </header>
 
     <main>
+        <h1 id="homePage">Home Page</h1> 
         <div class="img">
             <img src="images/whovilleCity.webp" alt="hero image" class="heroImg" width="100" height="100" loading="lazy">
             <a href="join.html" class="ctaButton">Sign Up Now</a>
         </div>
 
-        <h1>Home Page</h1> 
 
         <div id="container">
             <section>
