--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -88,27 +88,27 @@
 
         <div class="images">
             <figure>
-                <img src="images/dog(1).webp" alt="Dog"  loading="lazy">
+                <img class="hover" src="images/dog(1).webp" alt="Dog"  loading="lazy">
                 <figcaption>Max pulling sleigh</figcaption>
             </figure>
             <figure>
-                <img src="images/taxi(1).webp" alt="Vehicle"  loading="lazy">
+                <img class="hover"  src="images/taxi(1).webp" alt="Vehicle"  loading="lazy">
                 <figcaption>Town vehicles</figcaption>
             </figure>
             <figure>
-                <img src="images/town(1).webp" alt="Town"  loading="lazy">
+                <img class="hover"  src="images/town(1).webp" alt="Town"  loading="lazy">
                 <figcaption>Overview of Whoville town</figcaption>
             </figure>
             <figure>
-                <img src="images/sleighRide(1).webp" alt="Sleigh Ride"  loading="lazy">
+                <img class="hover"  src="images/sleighRide(1).webp" alt="Sleigh Ride"  loading="lazy">
                 <figcaption>Sleigh ride adventures</figcaption>
             </figure>
             <figure>
-                <img src="images/toys(1).webp" alt="Dog"  loading="lazy">
+                <img class="hover"  src="images/toys(1).webp" alt="Dog"  loading="lazy">
                 <figcaption>Christmas day toys</figcaption>
             </figure>
             <figure>
-                <img src="images/tree(1).webp" alt="Tree"  loading="lazy">
+                <img class="hover"  src="images/tree(1).webp" alt="Tree"  loading="lazy">
                 <figcaption>Town christmas tree lighting </figcaption>
             </figure>
         </div>
