--- a/iProject/sitePlan.html
+++ b/iProject/sitePlan.html
@@ -64,16 +64,12 @@
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, Rapid Rascals Rafting
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the Shoshone section of Glenwood Canyon and beyond.
+      The best neighborhood in Whoville, Whoville Heights is a secluded neigborhood that only seeks to spread Christmas cheer. The town is at the base of a thousand-foot tall "Mount Crumpit" mountain with an overlook just north of the city where the Grinch resides. The Whos are whimsical creatures, but they resemble ordinary people with large ears, buck-teeth, and strange hairstyles. 
+      
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
-      Trips vary from mild and great for families, to trips exclusively for
-      physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, Rapid Rascals Rafting can make it
-      happen for you.
+      Walking through Whoville would feel like entering a magical place full of bright colors and happiness. The houses are crooked and colorful, decorated with festive lights and fun ornaments. Candy-cane lampposts light up the snowy streets, and you can smell holiday treats and hear joyful songs. Whos of all sizes are busy spreading kindness, laughing, and enjoying the decorations everywhere. It’s a place that feels like a big, cheerful celebration.
     </p>
 
     <h3>Navigation</h3>
