--- a/iProject/sitePlan.html
+++ b/iProject/sitePlan.html
@@ -21,9 +21,9 @@
     <h3>Purpose</h3>
     <p>The HOA website's purpose is to provide a secure platform for sharing and receiving information, improving communication, and making it convenient for residents</p>
     
-    <h3>Audience</h3>
-    <p>Our audience are those that live within the community</p>
-    
+    <h3>Scenarios</h3>
+    <p>What are the current HOA fees, and are there any planned increases in the near future?</p>
+    <p>What is the process for submitting and getting approval for home improvement projects?</p>
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
